// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditorOptionsGroup/> renders as expected 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--flexGrowZero visEditorOptionsGroup__panel"
>
  <div
    class="euiAccordion euiAccordion-isOpen"
  >
    <div
      class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <button
          aria-controls="eog_staticId"
          aria-expanded="true"
          class="euiAccordion__button"
          type="button"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
            >
              <svg
                class="euiIcon euiIcon--medium euiIcon-isLoading"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="euiFlexItem euiAccordion__buttonContent"
            >
              <h2
                class="euiTitle euiTitle--xsmall"
              >
                Some options
              </h2>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="euiAccordion__childWrapper"
      id="eog_staticId"
    >
      <div>
        <div
          class=""
        >
          <div
            class="euiSpacer euiSpacer--m"
          />
          <span>
            Children
          </span>
          <span>
            within the editor group
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EditorOptionsGroup/> renders as expected with actions 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--flexGrowZero visEditorOptionsGroup__panel"
>
  <div
    class="euiAccordion euiAccordion-isOpen"
  >
    <div
      class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <button
          aria-controls="eog_staticId"
          aria-expanded="true"
          class="euiAccordion__button"
          type="button"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
            >
              <svg
                class="euiIcon euiIcon--medium euiIcon-isLoading"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="euiFlexItem euiAccordion__buttonContent"
            >
              <h2
                class="euiTitle euiTitle--xsmall"
              >
                Some actions
              </h2>
            </div>
          </div>
        </button>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="Remove"
          class="euiButtonIcon euiButtonIcon--text"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <div
      class="euiAccordion__childWrapper"
      id="eog_staticId"
    >
      <div>
        <div
          class=""
        >
          <div
            class="euiSpacer euiSpacer--m"
          />
          <span>
            Some children
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EditorOptionsGroup/> renders as expected with initial collapsed 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--flexGrowZero visEditorOptionsGroup__panel"
>
  <div
    class="euiAccordion"
  >
    <div
      class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <button
          aria-controls="eog_staticId"
          aria-expanded="false"
          class="euiAccordion__button"
          type="button"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
            >
              <svg
                class="euiIcon euiIcon--medium euiIcon-isLoading"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="euiFlexItem euiAccordion__buttonContent"
            >
              <h2
                class="euiTitle euiTitle--xsmall"
              >
                Some options
              </h2>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="euiAccordion__childWrapper"
      id="eog_staticId"
    >
      <div>
        <div
          class=""
        >
          <div
            class="euiSpacer euiSpacer--m"
          />
          <span>
            Children
          </span>
          <span>
            within the editor group
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
